--- a/esemble_learning.ipynb
+++ b/esemble_learning.ipynb
@@ -386,7 +386,7 @@
     "            'n_estimators': n_estimators,\n",
     "            'max_features': max_features,\n",
     "            'accuracy': accuracy,\n",
-    "            'training_time': training_time\n",
+    "            'training_time_seconds': training_time\n",
     "        })\n",
     "results_df = pd.DataFrame(results)\n",
     "results_df"
@@ -403,10 +403,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### WNIOSKI:\n",
-    "Best results:\n",
+    "#### Best results:\n",
     "1. <200, sqrt> Acc: 0.9706 Time: 51.91\n",
-    "2. <100, sqrt> Acc: 0.9702 Time: 25.19 (2 razy szybszy niż pierwszy)\n",
+    "2. **<u><100, sqrt> Acc: 0.9702 Time: 25.19 (2 razy szybszy niż pierwszy)</u>**\n",
     "3. <50, sqrt> Acc: 0.9688 Time: 12.81 \n",
     "4. <100, log2> Acc: 0.9674 Time: 9.32 (najszybszy)\n"
    ],
@@ -414,6 +413,80 @@
     "collapsed": false
    },
    "id": "3d6aa0f4e48ded4"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Zadanie 7 : Trenować zespół klasyfikatorów ExtraTree z optymalizacją parametrów.\n",
+    "1. Wybór Podziałów:\n",
+    "    W Extra Trees, podziały są wybierane bardziej losowo. Dla każdego podziału, algorytm losowo wybiera punkt podziału dla każdej cechy, a następnie wybiera z tych podziałów ten, który najlepiej dzieli dane. W przeciwieństwie do RF Nie szuka optymalnego punktu podziału dla każdej cechy.\n",
+    "2. Próbkowanie Bootstrapping:\n",
+    "    Zwykle korzysta z całego oryginalnego zestawu danych do trenowania każdego drzewa, zamiast próbkowania bootstrapping (jak w RF).\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b197d168b81be6c1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    n_estimators max_features  accuracy  training_time_seconds\n0             10         None    0.9616              58.787493\n1             10         sqrt    0.9514               2.697660\n2             10         log2    0.9359               1.228879\n3             50         None    0.9698             298.692721\n4             50         sqrt    0.9693              13.231961\n5             50         log2    0.9657               5.925987\n6            100         None    0.9707             600.822394\n7            100         sqrt    0.9725              26.156540\n8            100         log2    0.9665              11.650737\n9            200         None    0.9725            1448.277472\n10           200         sqrt    0.9735              54.723239\n11           200         log2    0.9678              24.404151",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>n_estimators</th>\n      <th>max_features</th>\n      <th>accuracy</th>\n      <th>training_time_seconds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10</td>\n      <td>None</td>\n      <td>0.9616</td>\n      <td>58.787493</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10</td>\n      <td>sqrt</td>\n      <td>0.9514</td>\n      <td>2.697660</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10</td>\n      <td>log2</td>\n      <td>0.9359</td>\n      <td>1.228879</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50</td>\n      <td>None</td>\n      <td>0.9698</td>\n      <td>298.692721</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50</td>\n      <td>sqrt</td>\n      <td>0.9693</td>\n      <td>13.231961</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50</td>\n      <td>log2</td>\n      <td>0.9657</td>\n      <td>5.925987</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>100</td>\n      <td>None</td>\n      <td>0.9707</td>\n      <td>600.822394</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>100</td>\n      <td>sqrt</td>\n      <td>0.9725</td>\n      <td>26.156540</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>100</td>\n      <td>log2</td>\n      <td>0.9665</td>\n      <td>11.650737</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>200</td>\n      <td>None</td>\n      <td>0.9725</td>\n      <td>1448.277472</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>200</td>\n      <td>sqrt</td>\n      <td>0.9735</td>\n      <td>54.723239</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>200</td>\n      <td>log2</td>\n      <td>0.9678</td>\n      <td>24.404151</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "\n",
+    "n_estimators_values = [10, 50, 100, 200]\n",
+    "max_features_values = [None, 'sqrt', 'log2']\n",
+    "results = []\n",
+    "\n",
+    "for n_estimators in n_estimators_values:\n",
+    "    for max_features in max_features_values:\n",
+    "        et_clf = ExtraTreesClassifier(n_estimators=n_estimators, max_features=max_features)\n",
+    "        start_time = time.time()\n",
+    "        et_clf.fit(X_train, y_train)\n",
+    "        end_time = time.time()\n",
+    "        training_time = end_time - start_time\n",
+    "        \n",
+    "        predictions = et_clf.predict(X_test)\n",
+    "        accuracy = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "        results.append({\n",
+    "            'n_estimators': n_estimators,\n",
+    "            'max_features': max_features,\n",
+    "            'accuracy': accuracy,\n",
+    "            'training_time_seconds': training_time\n",
+    "        })\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-05T18:02:36.680467Z",
+     "start_time": "2023-12-05T17:20:05.550308Z"
+    }
+   },
+   "id": "aa408d435da54b55"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ea0e3114445ad1fa"
   }
  ],
  "metadata": {
