--- a/esemble_learning.ipynb
+++ b/esemble_learning.ipynb
@@ -479,6 +479,19 @@
    "id": "aa408d435da54b55"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Results for ExtraTreeClassifier:\n",
+    "1. <200, sqrt> Acc: 0.9735 Time: 54.72 [highest accuracy]\n",
+    "2. **<u><100,sqrt> Acc:0.9725 Time: 26.15</u>**[most balanced]\n",
+    "3. <50, sgrt> Acc: 0.9693 Time: 13.23 [faastest]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d9ac6f11bd361a90"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -486,7 +499,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "ea0e3114445ad1fa"
+   "id": "fbde026b01292c31"
   }
  ],
  "metadata": {
