--- a/esemble_learning.ipynb
+++ b/esemble_learning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -51,8 +51,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T12:02:56.366170Z",
-     "start_time": "2023-12-05T12:02:55.040857Z"
+     "end_time": "2023-12-09T16:53:28.111258Z",
+     "start_time": "2023-12-09T16:53:26.032663Z"
     }
    },
    "id": "8ce2a166f6c59580"
@@ -492,6 +492,67 @@
    "id": "d9ac6f11bd361a90"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Zadanie 8 : Trenować zespół klasyfikatorów XGBoost z optymalizacją parametrów."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1ba8e932a666b201"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   n_estimators  learning_rate  accuracy  training_time_seconds\n0            50           0.01    0.9095              51.436185\n1            50           0.10    0.9591              59.445122\n2            50           0.20    0.9699              55.449024\n3           100           0.01    0.9242             106.356231\n4           100           0.10    0.9702             117.150576\n5           100           0.20    0.9771             115.104506\n6           200           0.01    0.9381             226.431324\n7           200           0.10    0.9771             222.883806\n8           200           0.20    0.9806             217.297048",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>n_estimators</th>\n      <th>learning_rate</th>\n      <th>accuracy</th>\n      <th>training_time_seconds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50</td>\n      <td>0.01</td>\n      <td>0.9095</td>\n      <td>51.436185</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50</td>\n      <td>0.10</td>\n      <td>0.9591</td>\n      <td>59.445122</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50</td>\n      <td>0.20</td>\n      <td>0.9699</td>\n      <td>55.449024</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100</td>\n      <td>0.01</td>\n      <td>0.9242</td>\n      <td>106.356231</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>100</td>\n      <td>0.10</td>\n      <td>0.9702</td>\n      <td>117.150576</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>100</td>\n      <td>0.20</td>\n      <td>0.9771</td>\n      <td>115.104506</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>200</td>\n      <td>0.01</td>\n      <td>0.9381</td>\n      <td>226.431324</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>200</td>\n      <td>0.10</td>\n      <td>0.9771</td>\n      <td>222.883806</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>200</td>\n      <td>0.20</td>\n      <td>0.9806</td>\n      <td>217.297048</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import time\n",
+    "\n",
+    "n_estimators_values = [50, 100, 200]\n",
+    "learning_rates = [0.01, 0.1, 0.2]\n",
+    "results = []\n",
+    "\n",
+    "for n_estimators in n_estimators_values:\n",
+    "    for learning_rate in learning_rates:\n",
+    "        xgb_clf = XGBClassifier(n_estimators = n_estimators, learning_rate = learning_rate)\n",
+    "        start_time = time.time()\n",
+    "        xgb_clf.fit(X_train, y_train)\n",
+    "        end_time = time.time()\n",
+    "        training_time = end_time - start_time\n",
+    "        \n",
+    "        predictions = xgb_clf.predict(X_test)\n",
+    "        accuracy = accuracy_score(y_test, predictions)\n",
+    "        results.append({\n",
+    "            'n_estimators': n_estimators,\n",
+    "            'learning_rate': learning_rate,\n",
+    "            'accuracy': accuracy,\n",
+    "            'training_time_seconds': training_time\n",
+    "        })\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-09T17:19:38.034268Z",
+     "start_time": "2023-12-09T17:00:04.517549Z"
+    }
+   },
+   "id": "437a384ab8f327a5"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -499,7 +560,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "fbde026b01292c31"
+   "id": "7d4a7cb8eecebda4"
   }
  ],
  "metadata": {
