Gridsearch DT correction

--- a/ensemble_learning.ipynb
+++ b/ensemble_learning.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -285,8 +285,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T13:31:28.920625Z",
-     "start_time": "2023-12-05T13:31:23.597796Z"
+     "end_time": "2023-12-10T21:26:18.973466Z",
+     "start_time": "2023-12-10T21:26:13.532229Z"
     }
    },
    "id": "6d4283fd9d6420bb"
@@ -303,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Best parameters: {'criterion': 'entropy', 'max_depth': None}\n",
-      "Best accuracy: 0.8864\n",
-      "Prediction time:  0.008599996566772461\n"
+      "DT accuracy: 0.8864\n",
+      "Training time:  9.094825983047485\n"
      ]
     }
    ],
@@ -320,22 +320,28 @@
     "    'max_depth': [None, 2, 6, 10, 16],\n",
     "    'criterion': ['log_loss', 'entropy']\n",
     "}\n",
-    "grid_search = GridSearchCV(estimator=dt, param_grid=param_grid, cv=5, scoring='accuracy')\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "print(\"Best parameters:\", grid_search.best_params_)\n",
+    "\n",
+    "grid_search_dt = GridSearchCV(estimator=dt, param_grid=param_grid, cv=5, scoring='accuracy')\n",
+    "grid_search_dt.fit(X_train, y_train)\n",
+    "best_params = grid_search_dt.best_params_\n",
+    "print(\"Best parameters:\", best_params)\n",
+    "\n",
+    "dt_clf = DecisionTreeClassifier(**best_params)\n",
     "start_time = time.time()\n",
-    "predictions = grid_search.best_estimator_.predict(X_test)\n",
+    "dt_clf.fit(X_train, y_train)\n",
     "end_time = time.time()\n",
-    "prediction_time = end_time - start_time\n",
+    "predictions = dt_clf.predict(X_test)\n",
+    "\n",
+    "training_time = end_time - start_time\n",
     "accuracy = accuracy_score(y_test, predictions)\n",
-    "print(\"Best accuracy:\", accuracy)\n",
-    "print(\"Prediction time: \", prediction_time)"
+    "print(\"DT accuracy:\", accuracy)\n",
+    "print(\"Training time: \", training_time)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T13:36:42.963254Z",
-     "start_time": "2023-12-05T13:32:46.856788Z"
+     "end_time": "2023-12-10T21:30:29.345502Z",
+     "start_time": "2023-12-10T21:26:22.306012Z"
     }
    },
    "id": "c6e68a37c88334c1"
@@ -553,14 +559,16 @@
    "id": "437a384ab8f327a5"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "Results:\n",
+    "1. <200, 0.20> Acc: 0.9806 Time: 217.29\n",
+    "2. <100, 0.20>"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "7d4a7cb8eecebda4"
+   "id": "e92e27fb4d332909"
   }
  ],
  "metadata": {
