--- a/ensemble_learning.ipynb
+++ b/ensemble_learning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -51,8 +51,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-09T16:53:28.111258Z",
-     "start_time": "2023-12-09T16:53:26.032663Z"
+     "end_time": "2023-12-11T09:27:06.280199Z",
+     "start_time": "2023-12-11T09:27:03.504694Z"
     }
    },
    "id": "8ce2a166f6c59580"
@@ -358,63 +358,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "outputs": [
     {
-     "data": {
-      "text/plain": "    n_estimators max_features  accuracy  training_time\n0             10         sqrt    0.9478       2.656910\n1             10         None    0.9458      75.896948\n2             10         log2    0.9405       0.995056\n3             50         sqrt    0.9688      12.816001\n4             50         None    0.9579     375.386395\n5             50         log2    0.9639       4.698040\n6            100         sqrt    0.9702      25.193281\n7            100         None    0.9572     746.487141\n8            100         log2    0.9674       9.322793\n9            200         sqrt    0.9706      51.910361\n10           200         None    0.9582    1644.607920\n11           200         log2    0.9672      28.186736",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>n_estimators</th>\n      <th>max_features</th>\n      <th>accuracy</th>\n      <th>training_time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10</td>\n      <td>sqrt</td>\n      <td>0.9478</td>\n      <td>2.656910</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10</td>\n      <td>None</td>\n      <td>0.9458</td>\n      <td>75.896948</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10</td>\n      <td>log2</td>\n      <td>0.9405</td>\n      <td>0.995056</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50</td>\n      <td>sqrt</td>\n      <td>0.9688</td>\n      <td>12.816001</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50</td>\n      <td>None</td>\n      <td>0.9579</td>\n      <td>375.386395</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50</td>\n      <td>log2</td>\n      <td>0.9639</td>\n      <td>4.698040</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>100</td>\n      <td>sqrt</td>\n      <td>0.9702</td>\n      <td>25.193281</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>100</td>\n      <td>None</td>\n      <td>0.9572</td>\n      <td>746.487141</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>100</td>\n      <td>log2</td>\n      <td>0.9674</td>\n      <td>9.322793</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>200</td>\n      <td>sqrt</td>\n      <td>0.9706</td>\n      <td>51.910361</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>200</td>\n      <td>None</td>\n      <td>0.9582</td>\n      <td>1644.607920</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>200</td>\n      <td>log2</td>\n      <td>0.9672</td>\n      <td>28.186736</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'max_features': 'sqrt', 'n_estimators': 200}\n",
+      "RF accuracy: 0.9705\n",
+      "Training time:  52.79489302635193\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "import time\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "n_estimators_values = [10, 50, 100, 200]\n",
-    "max_features_values = { None, 'sqrt', 'log2'}\n",
-    "results = []\n",
+    "param_grid = {\n",
+    "    'n_estimators': [10, 50, 100, 200],\n",
+    "    'max_features': [None, 'sqrt', 'log2']\n",
+    "}\n",
+    "rf = RandomForestClassifier()\n",
+    "grid_search_rf = GridSearchCV(estimator=rf, param_grid=param_grid, cv=3, scoring='accuracy')\n",
+    "grid_search_rf.fit(X_train, y_train)\n",
+    "best_params = grid_search_rf.best_params_\n",
+    "print(\"Best parameters:\", best_params)\n",
     "\n",
-    "for n_estimators in n_estimators_values:\n",
-    "    for max_features in max_features_values:\n",
-    "        rf_clf = RandomForestClassifier(n_estimators=n_estimators, max_features=max_features)\n",
-    "        start_time = time.time()\n",
-    "        rf_clf.fit(X_train, y_train)\n",
-    "        end_time = time.time()\n",
-    "        training_time = end_time - start_time\n",
-    "        \n",
-    "        predictions = rf_clf.predict(X_test)\n",
-    "        accuracy = accuracy_score(y_test, predictions)\n",
+    "rf_clf = RandomForestClassifier(**best_params)\n",
+    "start_time = time.time()\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "end_time = time.time()\n",
+    "predictions = rf_clf.predict(X_test)\n",
     "\n",
-    "        results.append({\n",
-    "            'n_estimators': n_estimators,\n",
-    "            'max_features': max_features,\n",
-    "            'accuracy': accuracy,\n",
-    "            'training_time_seconds': training_time\n",
-    "        })\n",
-    "results_df = pd.DataFrame(results)\n",
-    "results_df"
+    "training_time = end_time - start_time\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"RF accuracy:\", accuracy)\n",
+    "print(\"Training time: \", training_time)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T16:02:23.533892Z",
-     "start_time": "2023-12-05T15:12:43.269314Z"
+     "end_time": "2023-12-11T11:02:02.381491Z",
+     "start_time": "2023-12-11T09:27:27.738421Z"
     }
    },
    "id": "b5a2239ad17d3077"
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Best results:\n",
-    "1. <200, sqrt> Acc: 0.9706 Time: 51.91\n",
-    "2. **<u><100, sqrt> Acc: 0.9702 Time: 25.19 (2 razy szybszy niż pierwszy)</u>**\n",
-    "3. <50, sqrt> Acc: 0.9688 Time: 12.81 \n",
-    "4. <100, log2> Acc: 0.9674 Time: 9.32 (najszybszy)\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
@@ -436,62 +430,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "    n_estimators max_features  accuracy  training_time_seconds\n0             10         None    0.9616              58.787493\n1             10         sqrt    0.9514               2.697660\n2             10         log2    0.9359               1.228879\n3             50         None    0.9698             298.692721\n4             50         sqrt    0.9693              13.231961\n5             50         log2    0.9657               5.925987\n6            100         None    0.9707             600.822394\n7            100         sqrt    0.9725              26.156540\n8            100         log2    0.9665              11.650737\n9            200         None    0.9725            1448.277472\n10           200         sqrt    0.9735              54.723239\n11           200         log2    0.9678              24.404151",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>n_estimators</th>\n      <th>max_features</th>\n      <th>accuracy</th>\n      <th>training_time_seconds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10</td>\n      <td>None</td>\n      <td>0.9616</td>\n      <td>58.787493</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10</td>\n      <td>sqrt</td>\n      <td>0.9514</td>\n      <td>2.697660</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10</td>\n      <td>log2</td>\n      <td>0.9359</td>\n      <td>1.228879</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>50</td>\n      <td>None</td>\n      <td>0.9698</td>\n      <td>298.692721</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>50</td>\n      <td>sqrt</td>\n      <td>0.9693</td>\n      <td>13.231961</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>50</td>\n      <td>log2</td>\n      <td>0.9657</td>\n      <td>5.925987</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>100</td>\n      <td>None</td>\n      <td>0.9707</td>\n      <td>600.822394</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>100</td>\n      <td>sqrt</td>\n      <td>0.9725</td>\n      <td>26.156540</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>100</td>\n      <td>log2</td>\n      <td>0.9665</td>\n      <td>11.650737</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>200</td>\n      <td>None</td>\n      <td>0.9725</td>\n      <td>1448.277472</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>200</td>\n      <td>sqrt</td>\n      <td>0.9735</td>\n      <td>54.723239</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>200</td>\n      <td>log2</td>\n      <td>0.9678</td>\n      <td>24.404151</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'max_features': 'sqrt', 'n_estimators': 200}\n",
+      "ET accuracy: 0.9743\n",
+      "Training time:  39.31225800514221\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "\n",
-    "n_estimators_values = [10, 50, 100, 200]\n",
-    "max_features_values = [None, 'sqrt', 'log2']\n",
-    "results = []\n",
+    "param_grid = {\n",
+    "    'n_estimators': [10, 50, 100, 200],\n",
+    "    'max_features': [None, 'sqrt', 'log2']\n",
+    "}\n",
+    "et = ExtraTreesClassifier()\n",
+    "grid_search_et = GridSearchCV(estimator=et, param_grid=param_grid, cv=3, scoring='accuracy')\n",
+    "grid_search_et.fit(X_train, y_train)\n",
+    "best_params = grid_search_et.best_params_\n",
+    "print(\"Best parameters:\", best_params)\n",
     "\n",
-    "for n_estimators in n_estimators_values:\n",
-    "    for max_features in max_features_values:\n",
-    "        et_clf = ExtraTreesClassifier(n_estimators=n_estimators, max_features=max_features)\n",
-    "        start_time = time.time()\n",
-    "        et_clf.fit(X_train, y_train)\n",
-    "        end_time = time.time()\n",
-    "        training_time = end_time - start_time\n",
-    "        \n",
-    "        predictions = et_clf.predict(X_test)\n",
-    "        accuracy = accuracy_score(y_test, predictions)\n",
+    "et_clf = ExtraTreesClassifier(**best_params)\n",
+    "start_time = time.time()\n",
+    "et_clf.fit(X_train, y_train)\n",
+    "end_time = time.time()\n",
+    "predictions = et_clf.predict(X_test)\n",
     "\n",
-    "        results.append({\n",
-    "            'n_estimators': n_estimators,\n",
-    "            'max_features': max_features,\n",
-    "            'accuracy': accuracy,\n",
-    "            'training_time_seconds': training_time\n",
-    "        })\n",
-    "results_df = pd.DataFrame(results)\n",
-    "results_df"
+    "training_time = end_time - start_time\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"ET accuracy:\", accuracy)\n",
+    "print(\"Training time: \", training_time)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-05T18:02:36.680467Z",
-     "start_time": "2023-12-05T17:20:05.550308Z"
+     "end_time": "2023-12-11T11:58:58.697674Z",
+     "start_time": "2023-12-11T11:09:12.361511Z"
     }
    },
    "id": "aa408d435da54b55"
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Results for ExtraTreeClassifier:\n",
-    "1. <200, sqrt> Acc: 0.9735 Time: 54.72 [highest accuracy]\n",
-    "2. **<u><100,sqrt> Acc:0.9725 Time: 26.15</u>**[most balanced]\n",
-    "3. <50, sgrt> Acc: 0.9693 Time: 13.23 [faastest]"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
@@ -509,16 +495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [
     {
-     "data": {
-      "text/plain": "   n_estimators  learning_rate  accuracy  training_time_seconds\n0            50           0.01    0.9095              51.436185\n1            50           0.10    0.9591              59.445122\n2            50           0.20    0.9699              55.449024\n3           100           0.01    0.9242             106.356231\n4           100           0.10    0.9702             117.150576\n5           100           0.20    0.9771             115.104506\n6           200           0.01    0.9381             226.431324\n7           200           0.10    0.9771             222.883806\n8           200           0.20    0.9806             217.297048",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>n_estimators</th>\n      <th>learning_rate</th>\n      <th>accuracy</th>\n      <th>training_time_seconds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50</td>\n      <td>0.01</td>\n      <td>0.9095</td>\n      <td>51.436185</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50</td>\n      <td>0.10</td>\n      <td>0.9591</td>\n      <td>59.445122</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>50</td>\n      <td>0.20</td>\n      <td>0.9699</td>\n      <td>55.449024</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100</td>\n      <td>0.01</td>\n      <td>0.9242</td>\n      <td>106.356231</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>100</td>\n      <td>0.10</td>\n      <td>0.9702</td>\n      <td>117.150576</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>100</td>\n      <td>0.20</td>\n      <td>0.9771</td>\n      <td>115.104506</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>200</td>\n      <td>0.01</td>\n      <td>0.9381</td>\n      <td>226.431324</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>200</td>\n      <td>0.10</td>\n      <td>0.9771</td>\n      <td>222.883806</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>200</td>\n      <td>0.20</td>\n      <td>0.9806</td>\n      <td>217.297048</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'learning_rate': 0.2, 'n_estimators': 200}\n",
+      "XGBoost accuracy: 0.9806\n",
+      "Training time:  197.33163809776306\n"
+     ]
     }
    ],
    "source": [
@@ -526,34 +512,34 @@
     "from sklearn.metrics import accuracy_score\n",
     "import time\n",
     "\n",
-    "n_estimators_values = [50, 100, 200]\n",
-    "learning_rates = [0.01, 0.1, 0.2]\n",
-    "results = []\n",
+    "param_grid = {\n",
+    "    'n_estimators' : [50, 100, 200],\n",
+    "    'learning_rate' : [0.01, 0.1, 0.2]\n",
+    "}\n",
     "\n",
-    "for n_estimators in n_estimators_values:\n",
-    "    for learning_rate in learning_rates:\n",
-    "        xgb_clf = XGBClassifier(n_estimators = n_estimators, learning_rate = learning_rate)\n",
-    "        start_time = time.time()\n",
-    "        xgb_clf.fit(X_train, y_train)\n",
-    "        end_time = time.time()\n",
-    "        training_time = end_time - start_time\n",
-    "        \n",
-    "        predictions = xgb_clf.predict(X_test)\n",
-    "        accuracy = accuracy_score(y_test, predictions)\n",
-    "        results.append({\n",
-    "            'n_estimators': n_estimators,\n",
-    "            'learning_rate': learning_rate,\n",
-    "            'accuracy': accuracy,\n",
-    "            'training_time_seconds': training_time\n",
-    "        })\n",
-    "results_df = pd.DataFrame(results)\n",
-    "results_df"
+    "xgb = XGBClassifier()\n",
+    "grid_search_xgb = GridSearchCV(estimator=xgb, param_grid=param_grid, cv=3, scoring='accuracy')\n",
+    "grid_search_xgb.fit(X_train, y_train)\n",
+    "best_params = grid_search_xgb.best_params_\n",
+    "print(\"Best parameters:\", best_params)\n",
+    "\n",
+    "xgb_clf = XGBClassifier(**best_params)\n",
+    "start_time = time.time()\n",
+    "xgb_clf.fit(X_train, y_train)\n",
+    "end_time = time.time()\n",
+    "\n",
+    "training_time = end_time - start_time\n",
+    "predictions = xgb_clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"XGBoost accuracy:\", accuracy)\n",
+    "print(\"Training time: \", training_time)\n",
+    "      "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-09T17:19:38.034268Z",
-     "start_time": "2023-12-09T17:00:04.517549Z"
+     "end_time": "2023-12-11T17:17:02.548350Z",
+     "start_time": "2023-12-11T15:25:08.734101Z"
     }
    },
    "id": "437a384ab8f327a5"
@@ -561,14 +547,38 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Results:\n",
-    "1. <200, 0.20> Acc: 0.9806 Time: 217.29\n",
-    "2. <100, 0.20>"
+    "#### Summary:\n",
+    "1. **Best Accuracy: XGBoost : 0.98**\n",
+    "2. Best Parameters: \n",
+    "- max_depth : None,</center>\n",
+    "- criterion: entropy,\n",
+    "- max_features : sqrt,\n",
+    "- n_estimators : 200,\n",
+    "- learning_rate: 0.2\n",
+    "3. Training Time (seconds):   \n",
+    "Decision Tree : 9.09\n",
+    "Random Forest : 52.79\n",
+    "Extra Trees : 39.31\n",
+    "XGBoost: 197.33\n",
+    "\n",
+    "Conclusion: \n",
+    "Due to accuracy, XGBoost is the best classifier. However, if faster training times are more important, Extra Trees or Random Forest may be better options.\n",
+    "                    "
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "e92e27fb4d332909"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3dbfe0dcb5a2de3e"
   }
  ],
  "metadata": {
